@startuml

title __MAP's Class Diagram__\n



  namespace com.journear.app {
    namespace map {
      class com.journear.app.map.AndroidHelper {
          {static} + getFileName()
          {static} + isFastDownload()
          {static} + readFile()
      }
    }
  }
  

  namespace com.journear.app {
    namespace map {
      abstract class com.journear.app.map.GHAsyncTask {
          - error : Throwable
          + getError()
          + getErrorMessage()
          + hasError()

          {abstract} # saveDoInBackground()
      }
    }
  }
  

  namespace com.journear.app {
    namespace map {
      class com.journear.app.map.LandingActivity {
          # onCreate()
      }
    }
  }
  

  namespace com.journear.app {
    namespace map {
      class com.journear.app.map.MapActivity {
          {static} + incomingIntentName : String
          {static} - LOGTAG : String
          {static} - NEW_MENU_ID : int
          - currentArea : String
          - downloadURL : String
          - end : GeoPoint
          - fileListURL : String
          - hopper : GraphHopper
          - itemizedLayer : ItemizedLayer<MarkerItem>
          - mapView : MapView
          - mapsFolder : File
          - pathLayer : PathLayer
          - prefixURL : String
          - prepareInProgress : boolean
          - shortestPathRunning : boolean
          - start : GeoPoint
          + calcPath()
          + onCreateOptionsMenu()
          + onOptionsItemSelected()
          # onCreate()
          # onDestroy()
          # onLongPress()
          # onPause()
          # onResume()
          # showRoute()
          ~ downloadingFiles()
          ~ isReady()
          ~ loadGraphStorage()
          ~ loadMap()
          - chooseArea()
          - createMarkerItem()
          - createPathLayer()
          - finishPrepare()
          - initFiles()
          - log()
          - log()
          - logUser()
          - showRoute()
      }
    }
  }
  

  namespace com.journear.app {
    namespace map {
      class com.journear.app.map.MapActivity.MapEventsReceiver {
          + onGesture()
          ~ MapEventsReceiver()
      }
    }
  }
  


  

  com.journear.app.map.AndroidDownloader -up-|> com.graphhopper.util.Downloader
  com.journear.app.map.GHAsyncTask -up-|> android.os.AsyncTask
  com.journear.app.map.LandingActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.journear.app.map.MapActivity -up-|> android.app.Activity
  com.journear.app.map.MapActivity +-down- com.journear.app.map.MapActivity.MapEventsReceiver
  com.journear.app.map.MapActivity +-down- com.journear.app.map.MapActivity.MySpinnerListener
  com.journear.app.map.MapActivity.MapEventsReceiver .up.|> org.oscim.event.GestureListener
  com.journear.app.map.MapActivity.MapEventsReceiver -up-|> org.oscim.layers.Layer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
